<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ClinicEditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Clinic Name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Clinic Address"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Clinic Phone"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Insurance types:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance_type_1" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance_type_2" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance_type_3" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance_type_4" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance_type_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Payments method accepted:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbPaymentMethodCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cash" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbPaymentMethodCreditDebit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Credit/Debit cards" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnManageService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:text="Manage Services"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Working hours:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Opening Time: "
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvOpeningHrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="N/A"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Closing Time: "
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvClosingHrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="N/A"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Working days:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbMonday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Monday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbTuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tuesday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbWednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wednesday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbThursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Thursday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbFriday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Friday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbSaturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Saturday" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbSunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sunday" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:text="Save Changes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary" />

</LinearLayout>